--- a/_data/data.yml
+++ b/_data/data.yml
@@ -64,7 +64,7 @@ experiences:
           - Data Analytics
           - Augmented Reality
           - Internet of Things
-    - role: Teaching Assistants
+    - role: Teaching Assistant
       time: 2017 - 2019
       company: University of Applied Sciences, Darmstadt
       details: |
