--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 #Update all the sections by editing the data.yml file inside _data folder.
 
 # Site Settings
-title: My Resume
-url: 'http://webjeda.com'
+title: Curriculum Vitae - Janik Tinz
+url: 'https://janiktinz.github.io'
 baseurl: '/janiktinz.github.io' #change it according to your repository name
-description: A beautiful Jekyll theme for creating resume
+description: 
 # Style will be applied only after restarting the build or serve. Just choose one of the options.
 theme_skin: green # blue turquoise green berry orange ceramic
 chrome_mobile_color: #use hex colors (ex:#1976d2) or leave empty if you don't want a color for chrome mobile searchbar
