--- a/_data/data.yml
+++ b/_data/data.yml
@@ -41,7 +41,7 @@ sidebar:
 career-profile:
     title: Career Profile
     summary: |
-      Janik Tinz, born 1996, works as a Junior Software Engineer at Accso Accelerated Solutions GmbH in Darmstadt. His research topics are Industry 4.0, Augmented Reality and Machine Learning. I am always open to new projects in these fields. Don't hesitate to contact me!
+      I work as a Junior Software Engineer at Accso Accelerated Solutions GmbH in Darmstadt. My research topics are Industry 4.0, Augmented Reality and Machine Learning. I am always open to new projects in these fields. Don't hesitate to contact me!
 education:
     - degree: Master of Science in Data Science
       university: University of Applied Sciences, Darmstadt
@@ -92,7 +92,7 @@ publications:
       - title: Knowledge Management Models for the Smart Factory - A Comparative Analysis of Current Approaches
         link: "https://www.researchgate.net/profile/Patrick_Tinz/publication/336225680_Knowledge_Management_Models_for_the_Smart_Factory_A_Comparative_Analysis_of_Current_Approaches/links/5d96165792851c2f70e80636/Knowledge-Management-Models-for-the-Smart-Factory-A-Comparative-Analysis-of-Current-Approaches.pdf"
         authors: Patrick Tinz, Janik Tinz und Stefan Zander
-        conference: 11th International Conference on Knowledge Management and Information Systems, September 2019, Vienna, Austria
+        conference: In Proceedings of the 11th International Joint Conference on Knowledge Discovery, Knowledge Engineering and Knowledge Management (IC3K 2019), pages 398-404, Vienna Austria
 
       - title: Knowledge Management Models for Smart Manufacturing – A Comparison of Current Approaches
         link: "https://www.hanser-elibrary.com/doi/abs/10.3139/104.112101"
@@ -107,26 +107,26 @@ theses:
       - title: Virtuelle Erweiterung eines physischen Modells mithilfe von Augmented Reality unter Berücksichtigung eines sensor- und aktorbasierten Kommunikationssystems
         link: 
         authors: Janik Tinz
-        conference: University of Applied Sciences - Darmstadt, September 2019
+        conference: University of Applied Sciences - Darmstadt, Department Computer Science (2019)
   
-skills:
-    title: Skills &amp; Proficiency
+#skills:
+    #title: Skills &amp; Proficiency
 
-    toolset:
-      - name: Python
-        level: 80%
+    #toolset:
+      #- name: Python
+        #level: 80%
 
-      - name: R
-        level: 60%
+      #- name: R
+        #level: 60%
 
-      - name: C/ C++
-        level: 90%
+      #- name: C/ C++
+        #level: 90%
 
-      - name: HTML5 & CSS
-        level: 95%
+      #- name: HTML5 & CSS
+        #level: 95%
 
-      - name: Unity
-        level: 85%
+      #- name: Unity
+        #level: 85%
 
 #footer: >
 #   Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
