--- a/_data/data.yml
+++ b/_data/data.yml
@@ -12,7 +12,7 @@ sidebar:
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: janik.tinz@accso.de
+    email: #janik.tinz@accso.de
     phone: 
     website: tinztwins.de #do not add http://
     linkedin: janiktinz
