--- a/_data/data.yml
+++ b/_data/data.yml
@@ -14,7 +14,7 @@ sidebar:
     # Sidebar links
     email: #janik.tinz@accso.de
     phone: 
-    website: tinztwins.de #do not add http://
+    website: #tinztwins.de #do not add http://
     linkedin: janiktinz
     github: janiktinz
     gitlab: janiktinz
