--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # Site Settings
 title: Curriculum Vitae - Janik Tinz
 url: 'https://janiktinz.github.io'
-baseurl: '/janiktinz.github.io' #change it according to your repository name
+#baseurl: '/janiktinz.github.io' #change it according to your repository name
 description: 
 # Style will be applied only after restarting the build or serve. Just choose one of the options.
 theme_skin: green # blue turquoise green berry orange ceramic
