--- a/_data/data.yml
+++ b/_data/data.yml
@@ -14,7 +14,7 @@ sidebar:
     # Sidebar links
     email:
     phone: 
-    website: tinztwins.com #do not add http://
+    website: towardsfinance.com #do not add http://
     linkedin: janiktinz
     github: janiktinz
     bitbucket:
